[gd_scene load_steps=6 format=3 uid="uid://c1sqisuuxr8b"]

[ext_resource type="Texture2D" uid="uid://c26fj3otshjfu" path="res://ui/menus/upgrades/icons/cargo_upgrade.svg" id="2"]
[ext_resource type="Script" path="res://ui/menus/upgrades/upgrade_menu.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://c5b0t46l0q0yn" path="res://ui/menus/upgrades/icons/weapon_upgrade.svg" id="5"]
[ext_resource type="PackedScene" uid="uid://beot5dehl7y3k" path="res://ui/menus/upgrades/upgrade_button.tscn" id="6"]
[ext_resource type="PackedScene" path="res://ui/menus/sounds/menu_sound_player.tscn" id="8"]

[node name="UpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
process_mode = 3
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -64.0
offset_right = 328.0
offset_bottom = 64.0

[node name="CargoUpgrade" parent="HBoxContainer" instance=ExtResource("6")]
layout_mode = 2
texture = ExtResource("2")
text = "Fuel"

[node name="WeaponUpgrade" parent="HBoxContainer" instance=ExtResource("6")]
layout_mode = 2
texture = ExtResource("5")
text = "Weapon"

[node name="MenuSoundPlayer" parent="." instance=ExtResource("8")]
